--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Pieces of Doczek</title>
+	<title>Валерия Game Queue</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body><center>
