--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body><center>
   <h1 style="font-weight:700;">Kolejka playlist dla Валерии</h1>
   <h3>Bo już same playlisty nie starczają</h3><hr>
-  <a href="https://www.youtube.com/playlist?list=PLp1tsi2hn9JbgDuwLWlWGbSTc5qgJsI25"><h2 style="font-weight:700;">seria Portal</h2></a>
-  <a href="https://www.youtube.com/playlist?list=PLp1tsi2hn9JY233_enPOaaV3ltmfY5gEO"><h2 style="font-weight:700;">Yoku's Island Express</h2></a><br>
+  <a href="https://youtube.com/playlist?list=PLp1tsi2hn9JbgDuwLWlWGbSTc5qgJsI25"><h2 style="font-weight:700;">seria Portal</h2></a>
+  <a href="https://youtube.com/playlist?list=PLp1tsi2hn9JY233_enPOaaV3ltmfY5gEO"><h2 style="font-weight:700;">Yoku's Island Express</h2></a>
+  <a href="https://youtube.com/playlist?list=PLp1tsi2hn9JaLfWrysG2UyBvvHVoiZ3In"><h2 style="font-weight:700;">Q.U.B.E. 2</h2></a>
 </center></body>
 </html>
