--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ p {
 
   <h1><a href="https://youtu.be/J_RZ_nioIPA">Blanka - Solo</a></h1>
   <h1><a href="https://youtu.be/J_RZ_nioIPA">Albina & Familja Kelmendi - Duje</a></h1>
-  <h1><a href="">Blanca Paloma - Eaea</a></h1>
-  <h1><a href="">Noa Kirel - Unicorn</a></h1>
-  <h1><a href="">Joker Out - Carpe Diem</a></h1>
+  <h1><notl href="">Blanca Paloma - Eaea</notl></h1>
+  <h1><notl href="">Noa Kirel - Unicorn</notl></h1>
+  <h1><notl href="">Joker Out - Carpe Diem</notl></h1>
 
 </center></body>
 </html>
