--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ p {
   <h1><a href="https://youtu.be/J_RZ_nioIPA">Blanka - Solo</a></h1>
   <h1><a href="https://youtu.be/J_RZ_nioIPA">Albina & Familja Kelmendi - Duje</a></h1>
   <h1><a href="https://youtu.be/dKgkVrdMg6Y">Blanca Paloma - Eaea</a></h1>
-  <h1><notl href="">Noa Kirel - Unicorn</notl></h1>
+  <h1><a href="https://youtu.be/_dQ_Q4LAC5o">Noa Kirel - Unicorn</a></h1>
   <h1><notl href="">Joker Out - Carpe Diem</notl></h1>
 
 </center></body>
