--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 </head>
 <body><center>
 	<h1 style="font-weight:700;">Thedoczek official website</h1><hr>
-	<p><b>Main page</b> • <a href=".\Pre-2022">Pre-2022</a> • <a href=".\Skylines">Skylines</a></p><hr>
+	<p><b>Main page</b> • <a href=".\Pre-2022">Pre-2022</a> • <a href=".\Skylines">Skylines</a> • <a href=".\Late_2023">Late 2023</a></p><hr>
 	<h1 style="font-weight:600;">Main page</h2>
 	<h2 style="font-weight:500;">Albums</h2>
 	<table border=3px>
@@ -19,6 +19,10 @@
 			<td width=180px>
 				<a href=".\Skylines"><img src="cd.png" width=128px></a><br><utw>Skylines</utw>
 				<br><wyd>Released:<br>05.07.2023</wyd>
+			</td>
+			<td width=180px>
+				<a href=".\Late_2023"><img src="cd.png" width=128px></a><br><utw>Late 2023</utw>
+				<br><wyd>Last release:<br>03.11.2023</wyd>
 			</td>
 		</tr>
 	</table>
