--- a/Late_2023/index.htm
+++ b/Late_2023/index.htm
@@ -13,8 +13,8 @@
 		<tr align=center>
 			<td width=300px><p><a href="Sky.mp3"><img src="..\mp3.png" width=128px></a></p><utw>Sky at the Night</utw><br><wyd>Released: 08.07.2023<br>First performed: 01.12.2023</wyd></td>
 			<td width=300px><p><a href="Egypt.mp3"><img src="..\mp3.png" width=128px></a></p><utw>Ancient Ritual</utw><br><wyd>Released: 01.09.2023<br>Updated: 01.12.2023</wyd></td>
-			<td width=300px><p><a href="BNW.mp3"><img src="..\mp3.png" width=128px></a></p><utw>Brand New World</utw><br><wyd>Released: 15.10.2023</wyd></td>
-			<td width=300px><p><a href="Waterfall.mp3"><img src="..\mp3.png" width=128px></a></p><utw>Waterfall</utw><br><wyd>Released: 03.11.2023</wyd></td>
+			<td width=300px><p><a href="BNW.mp3"><img src="..\mp3.png" width=128px></a></p><utw>Brand New World</utw><br><wyd>Released: 15.10.2023<br></wyd></td>
+			<td width=300px><p><a href="Waterfall.mp3"><img src="..\mp3.png" width=128px></a></p><utw>Waterfall</utw><br><wyd>Released: 03.11.2023<br></wyd></td>
 		</tr>
 		<tr>
 			<td align=center height=50px> <audio src="Sky.mp3" type="audio/mp3" controls>Click above</audio> </td>
