--- a/Skylines/index.htm
+++ b/Skylines/index.htm
@@ -7,7 +7,7 @@
 </head>
 <body><center>
 	<h1 style="font-weight:700;">Thedoczek official website</h1><hr>
-	<p><a href="..\">Main page</a> • <a href="..\Pre-2022">Pre-2022</a> • <b>Skylines</b> • <a href=".\Late_2023">Late 2023</a></p><hr>
+	<p><a href="..\">Main page</a> • <a href="..\Pre-2022">Pre-2022</a> • <b>Skylines</b> • <a href="..\Late_2023">Late 2023</a></p><hr>
 	<h1 style="font-weight:600;">Skylines</h2>
 	<table border=3px>
 		<tr align=center>
