--- a/Late_2023/index.htm
+++ b/Late_2023/index.htm
@@ -7,17 +7,15 @@
 </head>
 <body><center>
 	<h1 style="font-weight:700;">Thedoczek official website</h1><hr>
-	<p><a href="..\">Main page</a> • <a href="..\Pre-2022">Pre-2022</a> • <a href="..\Skylines">Skylines</a> • <b>Late 2023</b></p><hr>
-	<h1 style="font-weight:600;">Late 2023</h2>
+	<p><a href="..\">Main page</a><br><b>Collections: </b><a href="..\Pre-2022">Pre-2022</a> • <a href="..\Skylines">Skylines</a> • <b>Late 2023</b><br><b>Singles: </b><a href="..\Sky_at_the_Night">Sky at the Night</a></p><hr>
+	<h1 style="font-weight:600;">Late 2023</h1>
 	<table border=3px>
 		<tr align=center>
-			<td width=300px><p><a href="Sky.mp3"><img src="..\mp3.png" width=128px></a></p><utw>Sky at the Night</utw><br><wyd>Released: 08.07.2023<br>First performed: 01.12.2023</wyd></td>
 			<td width=300px><p><a href="Egypt.mp3"><img src="..\mp3.png" width=128px></a></p><utw>Ancient Ritual</utw><br><wyd>Released: 01.09.2023<br>Updated: 01.12.2023</wyd></td>
 			<td width=300px><p><a href="BNW.mp3"><img src="..\mp3.png" width=128px></a></p><utw>Brand New World</utw><br><wyd>Released: 15.10.2023<br></wyd></td>
 			<td width=300px><p><a href="Waterfall.mp3"><img src="..\mp3.png" width=128px></a></p><utw>Waterfall</utw><br><wyd>Released: 03.11.2023<br></wyd></td>
 		</tr>
 		<tr>
-			<td align=center height=50px> <audio src="Sky.mp3" type="audio/mp3" controls>Click above</audio> </td>
 			<td align=center height=50px> <audio src="Egypt.mp3" type="audio/mp3" controls>Click above</audio> </td>
 			<td align=center height=50px> <audio src="BNW.mp3" type="audio/mp3" controls>Click above</audio> </td>
 			<td align=center height=50px> <audio src="Waterfall.mp3" type="audio/mp3" controls>Click above</audio> </td>
