--- a/Pre-2022/index.htm
+++ b/Pre-2022/index.htm
@@ -7,8 +7,8 @@
 </head>
 <body><center>
 	<h1 style="font-weight:700;">Thedoczek official website</h1><hr>
-	<p><a href="..\">Main page</a> • <b>Pre-2022</b> • <a href="..\Skylines">Skylines</a> • <a href="..\Late_2023">Late 2023</a></p><hr>
-	<h1 style="font-weight:600;">Pre-2022</h2>
+	<p><a href="..\">Main page</a><br><b>Collections: </b><b>Pre-2022</b> • <a href="..\Skylines">Skylines</a> • <a href="..\Late_2023">Late 2023</a><br><b>Singles: </b><a href="..\Sky_at_the_Night">Sky at the Night</a></p><hr>
+	<h1 style="font-weight:600;">Pre-2022</h1>
 	<table border=3px>
 		<tr align=center>
 			<td width=300px><p><a href="Intro.mp3"><img src="..\mp3.png" width=128px></a></p><utw>Introduction</utw><br><wyd>Released: 29.05.2021</wyd></td>
