--- a/Skylines/index.htm
+++ b/Skylines/index.htm
@@ -7,8 +7,8 @@
 </head>
 <body><center>
 	<h1 style="font-weight:700;">Thedoczek official website</h1><hr>
-	<p><a href="..\">Main page</a> • <a href="..\Pre-2022">Pre-2022</a> • <b>Skylines</b> • <a href="..\Late_2023">Late 2023</a></p><hr>
-	<h1 style="font-weight:600;">Skylines</h2>
+	<p><a href="..\">Main page</a><br><b>Collections: </b><a href="..\Pre-2022">Pre-2022</a> • <b>Skylines</b> • <a href="..\Late_2023">Late 2023</a><br><b>Singles: </b><a href="..\Sky_at_the_Night">Sky at the Night</a></p><hr>
+	<h1 style="font-weight:600;">Skylines</h1>
 	<table border=3px>
 		<tr align=center>
 			<td width=300px><p><a href="CampfireTale.mp3"><img src="..\mp3.png" width=128px></a></p><utw>Campfire Tale</utw><br><wyd>Released: 25.02.2023</wyd></td>
