--- a/index.htm
+++ b/index.htm
@@ -7,9 +7,9 @@
 </head>
 <body><center>
 	<h1 style="font-weight:700;">Thedoczek official website</h1><hr>
-	<p><b>Main page</b> • <a href=".\Pre-2022">Pre-2022</a> • <a href=".\Skylines">Skylines</a> • <a href=".\Late_2023">Late 2023</a></p><hr>
-	<h1 style="font-weight:600;">Main page</h2>
-	<h2 style="font-weight:500;">Albums</h2>
+	<p><b>Main page</b><br><b>Collections: </b><a href=".\Pre-2022">Pre-2022</a> • <a href=".\Skylines">Skylines</a> • <a href=".\Late_2023">Late 2023</a><br><b>Singles: </b><a href=".\Sky_at_the_Night">Sky at the Night</a></p><hr>
+	<h1 style="font-weight:600;">Main page</h1>
+	<h2 style="font-weight:500;">Collections</h2>
 	<table border=3px>
 		<tr align=center>
 			<td width=180px>
@@ -23,6 +23,15 @@
 			<td width=180px>
 				<a href=".\Late_2023"><img src="cd.png" width=128px></a><br><utw>Late 2023</utw>
 				<br><wyd>Last release:<br>03.11.2023</wyd>
+			</td>
+		</tr>
+	</table>
+	<h2 style="font-weight:500;">Singles</h2>
+	<table border=3px>
+		<tr align=center>
+			<td width=180px>
+				<a href=".\Sky_at_the_Night"><img src="single.png" width=128px></a><br><utw>Sky at the Night</utw>
+				<br><wyd>Released:<br>08.07.2021</wyd>
 			</td>
 		</tr>
 	</table>
