--- a/Sky_at_the_Night/index.htm
+++ b/Sky_at_the_Night/index.htm
@@ -13,7 +13,7 @@
 		<tr align=center>
 			<td width=300px><p><a href="Sky.mp3"><img src="..\mp3.png" width=128px></a></p><utw6>Original version</utw6><br><wyd>Released: 08.07.2023</wyd></td>
 			<td width=300px><p><a href="SkyC.mp3"><img src="..\mp3.png" width=128px></a></p><utw6>Choir version</utw6><br><wyd>Released: 24.09.2023<br>First performed: 01.12.2023</wyd></td>
-			<td width=300px><p><a href="SkyO.mp3"><img src="..\wip.png" width=128px></a></p><utw6>Orchestral verion</utw6><br><wyd>To be released: December 2023<br>To be performed: May/June 2024</wyd></td>
+			<td width=300px><p><a href="SkyO.mp3"><img src="..\wip.png" width=128px></a></p><utw6>Orchestral verion</utw6><br><wyd>Work in progress</wyd></td>
 		</tr>
 		<tr>
 			<td align=center height=50px> <audio src="Sky.mp3" type="audio/mp3" controls>Click above</audio> </td>
