--- a/gamepadtest/index.htm
+++ b/gamepadtest/index.htm
@@ -16,6 +16,19 @@ You should have received a copy of the CC0 Public Domain Dedication along with t
 -->
 <script type="text/javascript" src="./gamepadtest.js"></script>
 <style>
+
+@font-face {
+	font-family: 'Noto Sans';
+	src: url('https://thedoczek.github.io/scripts/NotoSans.ttf');
+	src: url('NotoSans.ttf')
+}
+
+body {
+  background-color: black !important;
+  color: white !important;
+  font-family: 'Noto Sans', sans-serif;
+}
+
 .axes {
   padding: 1em;
 }
@@ -66,7 +79,6 @@ You should have received a copy of the CC0 Public Domain Dedication along with t
 </head>
 <body>
 <h2 id="start">Press a button on your controller to start</h2>
-<a href="https://github.com/luser/gamepadtest"><img style="position: absolute; top: 0; right: 0; border: 0;" src="./luser.github.io_files/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
 
 
 </body></html>
